--- a/examples/point_defects/article/article.tex
+++ b/examples/point_defects/article/article.tex
@@ -67,7 +67,7 @@ described mathematically by the chemical rate balance equations given in followi
   \label{equation:point_defect_equations}
 \end{equation}\\
 
-There are different terms with different rate coefficients as seen in Eq. \ref{equation:point_defect_equations}. The first term on the RHS is a source term, representing defect generation with rate of \textit{K\textsubscript{0}}. In vacancy equation, \textit{b} is used as percent production bias to create a difference between interstitial and vacancy generation in domain. The second term is a reaction term, referring the recombination process if the defect \textit{x} reacts with defect \textit{y} with a rate of \textit{K\textsubscript{xy}}. The third term is also a reaction term, representing the reaction between the defect \textit{x} and the sink \text{s} with a rate of \textit{K\textsubscript{xs}}. In this study, the sink concentration is assumed constant and uniformly distributed over domain. The last term is diffusion term which is resolving the spatial behavior of defects.\\
+There are different terms with different rate coefficients as seen in Eq. \ref{equation:point_defect_equations}. The first term on the RHS is a source term, representing defect generation with rate of \textit{K\textsubscript{0}}. In vacancy equation, \textit{b} is used as percent production bias to create a difference between interstitial and vacancy generation in domain. The second term is a reaction term, referring the recombination process if the defect \textit{x} reacts with defect \textit{y} with a rate of \textit{K\textsubscript{xy}}. The third term is also a reaction term, representing the reaction between the defect \textit{x} and the sink \textit{s} with a rate of \textit{K\textsubscript{xs}}. In this study, the sink concentration is assumed constant and uniformly distributed over domain. The last term is diffusion term which is resolving the spatial behavior of defects.\\
 
 Another form of point defect equations can be written by using sink strength, \textit{k} definition for sink reaction term.\\
 
